k8s-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-service
  template:
    metadata:
      labels:
        app: php-service
    spec:
      containers:
        - name: php-service-container
          image: firstname-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rentalservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rentalservice
  template:
    metadata:
      labels:
        app: rentalservice
    spec:
      containers:
        - name: rentalservice-container
          image: rentalservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  type: ClusterIP
  selector:
    app: php-service
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rentalservice
spec:
  type: ClusterIP
  selector:
    app: rentalservice
  ports:
    - name: http
      port: 8080
      targetPort: 8080
