ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: myservice.info
      http:
        paths:
          - path: /php(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: php-service
                port:
                  number: 80
          - path: /rental(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rentalservice
                port:
                  number: 8080
